# pdf-slave

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.sh  Dockerfile_build  Dockerfile_build.sh  LICENSE  README.md  cook_docker.sh  dev_docker.sh  pdf-slave.cabal  pdf-slave.sublime-project  stack.yaml
app/: Main.hs
examples/: template01.htex  template01.yaml
examples/template01/: Helper.hs  render.sh  template01_bundle.yaml
examples/template02/: render.sh  template02.htex  template02.yaml
examples/template03/: render.sh  template03.htex  template03.yaml
examples/template04/: render.sh  template04.htex  template04.yaml
examples/template04/dep1/: dep1.htex  dep1_input.json
examples/template04/dep2/: dep2.htex
examples/template05/: render.sh  template05.htex  template05.yaml
examples/template05/template01/: template01.htex  template01.yaml  template01_input.json
examples/template05/template02/: template02.yaml
examples/template05/template02/code/: demo.hs
examples/template06/: render.sh  template06.htex  template06.yaml  template06_input.json
examples/template06/dep1/: dep1.htex
pdf-slave-template/: CHANGELOG.md  README.md  uploaddocs.sh
pdf-slave-template/src/Text/PDF/Slave/: Template.hs
src/Text/PDF/: Slave.hs
src/Text/PDF/Slave/: Render.hs  Template.hs
