name:                pdf-slave
version:             0.1.0.0
synopsis:            Tool to generate PDF from haskintex templates and YAML input
description:         Please see README.md
homepage:            https://github.com/NCrashed/pdf-slave#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Text.PDF.Slave
  default-language:    Haskell2010
  build-depends:
     base                     >= 4.7      && < 5

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies

executable pdf-slave
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                    >= 4.7      && < 5
    , pdf-slave
